[metadata]
name = seqconverter
version = 2.1.0
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Reads and writes sequence files in various formats. Performs manipulations on sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/seqconverter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
	sequencelib

[options.entry_points]
console_scripts =
    seqconverter = seqconverter:main
